# cpp-cicd-demo

./: CMakeLists.txt  main.cpp
.github/workflows/: ci.yml
